[追加] VariableManagerの実装とJinja2フィルタの追加
- 変数の優先順位管理を抽象化するVariableManagerを導入
- PlaybookExecutorから変数マージロジックを分離
- default, ipaddr フィルタをVariableResolverに追加
- null変数の扱いに配慮したコレクション利用への修正
- 関連するユニットテストの追加と修正

Co-authored-by: yamanakahirofumi <14960462+yamanakahirofumi@users.noreply.github.com>